--- a/app/template/scss/_homepage.scss
+++ b/app/template/scss/_homepage.scss
@@ -231,7 +231,7 @@ $h1 : 360px;
 		@include font-size(2.4);
 		color: $color5;
 		font-family: "SegoeUIBoldItalic";
-		font-style: italic;
+		// font-style: italic;
 		li{
 			&.separator{
 				margin: 0 1.5rem;
